@startuml
'https://plantuml.com/class-diagram
class ManejadorDePalabrasClaves
class ManejadorDeRespuestas

enum TipoDeRespuesta {
    POR_PALABRA_CLAVE
    ALEATOREAMENTE
}

class ManejadorDeMensajes {
    - ManejadorDePalabrasClaves& manejador_palabras
    - ManejadorDeRespuestas& manejador_respuestas
    - int primera_palabra_clave_hallada
    ---
    + ManejadorDeMensajes(manejador_palabras : ManejadorDePalabrasClaves&, manejador_respuestas : ManejadorDeRespuestas&)
    + void procesar_mensajes(mensaje : const string&)
    + void mostrar_mensajes(tipo : TipoDeRespuesta)
}

' Relaciones
ManejadorDeMensajes --> ManejadorDePalabrasClaves : "usa"
ManejadorDeMensajes --> ManejadorDeRespuestas : "usa"
ManejadorDeMensajes ..> TipoDeRespuesta : "utiliza"

@enduml